--- a/Rules_Provider/Complete/MainlandMedia/Letv.yaml
+++ b/Rules_Provider/Complete/MainlandMedia/Letv.yaml
@@ -1,11 +1,11 @@
 # > 乐视
 # 总条数: 14条
 payload:
-  - DOMAIN-SUFFIX,api.mob.app.letv.com
   - DOMAIN-SUFFIX,le.com
   - DOMAIN-SUFFIX,lecloud.com
   - DOMAIN-SUFFIX,lelecdn.com
   - DOMAIN-SUFFIX,lemall.com
+  - DOMAIN-SUFFIX,letv.allyes.com
   - DOMAIN-SUFFIX,letv.com
   - DOMAIN-SUFFIX,letv8.com
   - DOMAIN-SUFFIX,letvcdn.com
