--- a/Rules_Provider/Complete/Game/Gog.yaml
+++ b/Rules_Provider/Complete/Game/Gog.yaml
@@ -1,6 +1,7 @@
 # > Gog
-# 总条数: 3条
+# 总条数: 4条
 payload:
   - DOMAIN-SUFFIX,gog-statics.com
   - DOMAIN-SUFFIX,gog.com
   - DOMAIN-SUFFIX,gog.qtlglb.com
+  - DOMAIN,gog.salesmanago.com
