--- a/Rules_Provider/Complete/Game/Origin.yaml
+++ b/Rules_Provider/Complete/Game/Origin.yaml
@@ -1,8 +1,12 @@
 # > Origin
-# 总条数: 5条
+# 总条数: 9条
 payload:
+	- DOMAIN,cloudsync-prod.s3.amazonaws.com
+  - DOMAIN-SUFFIX,dawngate.com
+  - DOMAIN-SUFFIX,eastore.com
+  - DOMAIN-SUFFIX,lordofultima.com
   - DOMAIN-SUFFIX,origin.com
-  - DOMAIN,cloudsync-prod.s3.amazonaws.com
+  - DOMAIN-SUFFIX,origin.tv
   - DOMAIN,origin-a.akamaihd.net
   - DOMAIN,rtm.tnt-ea.com
   - DOMAIN,ssl-lvlt.cdn.ea.com
