--- a/Rules_Provider/Complete/Game/Xbox.yaml
+++ b/Rules_Provider/Complete/Game/Xbox.yaml
@@ -1,11 +1,14 @@
 # > Xbox
-# 总条数: 42条
+# 总条数: 45条
 payload:
+	- DOMAIN,img-prod-cms-rt-microsoft-com.akamaized.net
   - DOMAIN-SUFFIX,beth.games
   - DOMAIN-SUFFIX,bethesda.net
   - DOMAIN-SUFFIX,bethesdagamestudios.com
   - DOMAIN-SUFFIX,bethsoft.com
   - DOMAIN-SUFFIX,callersbane.com
+  - DOMAIN-SUFFIX,doom.com
+  - DOMAIN-SUFFIX,elderscrolls.com
   - DOMAIN-SUFFIX,forzamotorsport.net
   - DOMAIN-SUFFIX,forzaracingchampionship.com
   - DOMAIN-SUFFIX,forzarc.com
@@ -39,7 +42,6 @@ payload:
   - DOMAIN-SUFFIX,xboxservices.com
   - DOMAIN-SUFFIX,xboxstudios.com
   - DOMAIN-SUFFIX,xbx.lv
-  - DOMAIN,img-prod-cms-rt-microsoft-com.akamaized.net
   - DOMAIN,login.live.com
   - DOMAIN,logincdn.msauth.net
   - DOMAIN,store-images.s-microsoft.com
