--- a/Rules_Provider/Complete/GlobalMedia/Hulu.yaml
+++ b/Rules_Provider/Complete/GlobalMedia/Hulu.yaml
@@ -1,6 +1,7 @@
 # > Hulu
 # 总条数: 58条
 payload:
+	- DOMAIN,live-mediashield-ava-hulustream-com.akamaized.net
   - DOMAIN-SUFFIX,112263.com
   - DOMAIN-SUFFIX,assetshuluimcom-a.akamaihd.net
   - DOMAIN-SUFFIX,callhulu.com
