--- a/Rules_Provider/Complete/GlobalMedia/Bahamut.yaml
+++ b/Rules_Provider/Complete/GlobalMedia/Bahamut.yaml
@@ -1,10 +1,11 @@
 # > Bahamut
 # 总条数: 8条
 payload:
+	- DOMAIN-SUFFIX,bahamut.akamaized.net
   - DOMAIN-SUFFIX,bahamut.com.tw
   - DOMAIN-SUFFIX,digicert.com
   - DOMAIN-SUFFIX,fbcdn.net
   - DOMAIN-SUFFIX,gamer.com.tw
+  - DOMAIN-SUFFIX,gvt1.com
   - DOMAIN-SUFFIX,hinet.net
   - DOMAIN-SUFFIX,viblast.com
-  - DOMAIN,bahamut.akamaized.net
