--- a/Rules_Provider/Complete/Other/Developer.yaml
+++ b/Rules_Provider/Complete/Other/Developer.yaml
@@ -1,11 +1,6 @@
 # > 开发者网站
 # 总条数: 153条
 payload:
-  - DOMAIN-SUFFIX,datalore.io
-  - DOMAIN-SUFFIX,gitbook.com
-  - DOMAIN-SUFFIX,gitlab-assets.oss-cn-hongkong.aliyuncs.com
-  - DOMAIN-SUFFIX,jquery.com
-  - DOMAIN-SUFFIX,packagecontrol.io
   - DOMAIN-KEYWORD,github
   - DOMAIN-KEYWORD,jetbrains
   - DOMAIN-SUFFIX,ai.com
@@ -40,6 +35,7 @@ payload:
   - DOMAIN-SUFFIX,gcr.io
   - DOMAIN-SUFFIX,ghcr.io
   - DOMAIN-SUFFIX,git.io
+  - DOMAIN-SUFFIX,gitbook.com
   - DOMAIN-SUFFIX,gitbook.io
   - DOMAIN-SUFFIX,gitbook.zendesk.com
   - DOMAIN-SUFFIX,github-atom-io-herokuapp-com.freetls.fastly.net
@@ -69,6 +65,7 @@ payload:
   - DOMAIN-SUFFIX,go-lang.org
   - DOMAIN-SUFFIX,go.dev
   - DOMAIN-SUFFIX,golang.org
+  - DOMAIN-SUFFIX,identrust.c
   - DOMAIN-SUFFIX,intellij.com
   - DOMAIN-SUFFIX,intellij.net
   - DOMAIN-SUFFIX,intellij.org
@@ -100,6 +97,7 @@ payload:
   - DOMAIN-SUFFIX,opensource.guide
   - DOMAIN-SUFFIX,oracle.com
   - DOMAIN-SUFFIX,p-events-delivery.akamaized.net
+  - DOMAIN-SUFFIX,packagecontrol.io
   - DOMAIN-SUFFIX,playgrounds-cdn.apple.com
   - DOMAIN-SUFFIX,postman-echo.com
   - DOMAIN-SUFFIX,push-apple.com.akadns.net
@@ -150,6 +148,7 @@ payload:
   - DOMAIN-SUFFIX,webobjects.com
   - DOMAIN-SUFFIX,wpewebkit.org
   - DOMAIN,cdn.auth0.com
+  - DOMAIN,challenges.cloudflare.com
   - DOMAIN,d1q6f0aelx0por.cloudfront.net
   - DOMAIN,d2wy8f7a9ursnm.cloudfront.net
   - DOMAIN,d36jcksde1wxzq.cloudfront.net
