--- a/Rules_Provider/Complete/Other/Domestic.yaml
+++ b/Rules_Provider/Complete/Other/Domestic.yaml
@@ -1,21 +1,28 @@
 # 国内域名
-# 总条数: 3981条
+# 总条数: 4001条
 payload:
   - DOMAIN-KEYWORD,-cn
+  - DOMAIN-KEYWORD,.tmall.com
   - DOMAIN-KEYWORD,360buy
   - DOMAIN-KEYWORD,agefans
   - DOMAIN-KEYWORD,alicdn
   - DOMAIN-KEYWORD,alimama
   - DOMAIN-KEYWORD,alipay
+  - DOMAIN-KEYWORD,aliyun
   - DOMAIN-KEYWORD,appzapp
+  - DOMAIN-KEYWORD,baidu
   - DOMAIN-KEYWORD,baidupcs
+  - DOMAIN-KEYWORD,beplay
   - DOMAIN-KEYWORD,ccgslb
   - DOMAIN-KEYWORD,chinacache
   - DOMAIN-KEYWORD,duobao
   - DOMAIN-KEYWORD,duolingo
   - DOMAIN-KEYWORD,jdpay
+  - DOMAIN-KEYWORD,microsoft
   - DOMAIN-KEYWORD,moke
+  - DOMAIN-KEYWORD,officecdn
   - DOMAIN-KEYWORD,qhimg
+  - DOMAIN-KEYWORD,taobao
   - DOMAIN-KEYWORD,vpimg
   - DOMAIN-KEYWORD,weibo
   - DOMAIN-KEYWORD,xiami
@@ -3912,6 +3919,9 @@ payload:
   - DOMAIN-SUFFIX,zybang.com
   - DOMAIN-SUFFIX,zzxca.com
   - DOMAIN,nga.178.com
+  - IP-CIDR,1.255.62.0/24
+  - IP-CIDR,101.32.118.0/23
+  - IP-CIDR,101.32.96.0/20
   - IP-CIDR,103.206.40.0/22
   - IP-CIDR,103.38.56.0/22
   - IP-CIDR,103.52.76.0/22
@@ -3926,9 +3936,11 @@ payload:
   - IP-CIDR,115.236.118.34/32
   - IP-CIDR,115.236.121.4/32
   - IP-CIDR,116.251.64.0/18
+  - IP-CIDR,119.28.28.28/32
   - IP-CIDR,119.38.208.0/20
   - IP-CIDR,119.38.224.0/20
   - IP-CIDR,119.42.224.0/20
+  - IP-CIDR,129.226.0.0/16
   - IP-CIDR,139.220.243.27/32,no-resolve
   - IP-CIDR,139.95.0.0/16
   - IP-CIDR,14.1.112.0/22
@@ -3940,8 +3952,13 @@ payload:
   - IP-CIDR,163.181.0.0/16
   - IP-CIDR,170.33.0.0/16
   - IP-CIDR,172.16.102.56/32,no-resolve
+  - IP-CIDR,182.254.116.0/24
+  - IP-CIDR,183.128.0.0/11
+  - IP-CIDR,185.188.32.0/22
   - IP-CIDR,185.188.32.1/28,no-resolve
   - IP-CIDR,198.11.128.0/18
+  - IP-CIDR,203.205.238.0/23
+  - IP-CIDR,203.205.254.0/23
   - IP-CIDR,205.204.96.0/19
   - IP-CIDR,221.226.128.146/32,no-resolve
   - IP-CIDR,223.252.199.66/31
@@ -3975,7 +3992,9 @@ payload:
   - IP-CIDR,72.254.0.0/16
   - IP-CIDR,8.128.0.0/10
   - IP-CIDR,8.208.0.0/12
+  - IP-CIDR6,2a0b:b580::/48
   - IP-CIDR6,2a0b:b580::/48,no-resolve
+  - IP-CIDR6,2a0b:b581::/48
   - IP-CIDR6,2a0b:b581::/48,no-resolve
   - IP-CIDR6,2a0b:b582::/48,no-resolve
   - IP-CIDR6,2a0b:b583::/48,no-resolve
