--- a/Rules_Provider/Complete/Other/Google.yaml
+++ b/Rules_Provider/Complete/Other/Google.yaml
@@ -1,12 +1,11 @@
 # > Google
-# 总条数: 789条
+# 总条数: 735条
 payload:
   - DOMAIN-KEYWORD,appspot
   - DOMAIN-KEYWORD,blogspot
   - DOMAIN-KEYWORD,gmail
   - DOMAIN-KEYWORD,gstatic
   - DOMAIN-KEYWORD,recaptcha
-  - DOMAIN-KEYWORD,www.google.
   - DOMAIN-SUFFIX,0emm.com
   - DOMAIN-SUFFIX,1e100.net
   - DOMAIN-SUFFIX,1ucrs.com
@@ -152,8 +151,8 @@ payload:
   - DOMAIN-SUFFIX,charlestonroadregistry.com
   - DOMAIN-SUFFIX,chat.gle
   - DOMAIN-SUFFIX,chrome.com
+  - DOMAIN-SUFFIX,chromebook.com
   - DOMAIN-SUFFIX,chromecast.com
-  - DOMAIN-SUFFIX,chromeenterprise.google
   - DOMAIN-SUFFIX,chromeexperiments.com
   - DOMAIN-SUFFIX,chromeos.dev
   - DOMAIN-SUFFIX,chromercise.com
@@ -178,7 +177,6 @@ payload:
   - DOMAIN-SUFFIX,crashlytics.com
   - DOMAIN-SUFFIX,crbug.com
   - DOMAIN-SUFFIX,creativelab5.com
-  - DOMAIN-SUFFIX,crisisresponse.google
   - DOMAIN-SUFFIX,crossmediapanel.com
   - DOMAIN-SUFFIX,crr.com
   - DOMAIN-SUFFIX,crrev.com
@@ -204,16 +202,12 @@ payload:
   - DOMAIN-SUFFIX,distribution.qatp1.net
   - DOMAIN-SUFFIX,distribution.qcpp1.net
   - DOMAIN-SUFFIX,distribution.qpdp1.net
-  - DOMAIN-SUFFIX,docs.google.com
   - DOMAIN-SUFFIX,doubleclick-cn.net
   - DOMAIN-SUFFIX,doubleclick.com
   - DOMAIN-SUFFIX,doubleclick.net
   - DOMAIN-SUFFIX,download.qatp1.net
   - DOMAIN-SUFFIX,download.qcpp1.net
   - DOMAIN-SUFFIX,download.qpdp1.net
-  - DOMAIN-SUFFIX,drive.google.com
-  - DOMAIN-SUFFIX,earth-pa.clients6.google.com
-  - DOMAIN-SUFFIX,earth.google.com
   - DOMAIN-SUFFIX,episodic.com
   - DOMAIN-SUFFIX,fastlane.ci
   - DOMAIN-SUFFIX,fastlane.tools
@@ -240,7 +234,9 @@ payload:
   - DOMAIN-SUFFIX,get.app
   - DOMAIN-SUFFIX,get.dev
   - DOMAIN-SUFFIX,get.how
+  - DOMAIN-SUFFIX,get.new
   - DOMAIN-SUFFIX,get.page
+  - DOMAIN-SUFFIX,get.rsvp
   - DOMAIN-SUFFIX,getbumptop.com
   - DOMAIN-SUFFIX,getmdl.io
   - DOMAIN-SUFFIX,getoutline.org
@@ -250,6 +246,10 @@ payload:
   - DOMAIN-SUFFIX,globaledu.org
   - DOMAIN-SUFFIX,gmail.com
   - DOMAIN-SUFFIX,gmodules.com
+  - DOMAIN-SUFFIX,go-lang.com
+  - DOMAIN-SUFFIX,go-lang.net
+  - DOMAIN-SUFFIX,go-lang.org
+  - DOMAIN-SUFFIX,go.dev
   - DOMAIN-SUFFIX,godoc.org
   - DOMAIN-SUFFIX,gogle.com
   - DOMAIN-SUFFIX,gogole.com
@@ -262,14 +262,12 @@ payload:
   - DOMAIN-SUFFIX,googel.com
   - DOMAIN-SUFFIX,googil.com
   - DOMAIN-SUFFIX,googl.com
+  - DOMAIN-SUFFIX,google-access.net
   - DOMAIN-SUFFIX,google-analytics-cn.com
   - DOMAIN-SUFFIX,google-analytics.com
   - DOMAIN-SUFFIX,google-syndication.com
-  - DOMAIN-SUFFIX,google.ac
   - DOMAIN-SUFFIX,google.ad
   - DOMAIN-SUFFIX,google.ae
-  - DOMAIN-SUFFIX,google.af
-  - DOMAIN-SUFFIX,google.ai
   - DOMAIN-SUFFIX,google.al
   - DOMAIN-SUFFIX,google.am
   - DOMAIN-SUFFIX,google.as
@@ -295,6 +293,7 @@ payload:
   - DOMAIN-SUFFIX,google.cl
   - DOMAIN-SUFFIX,google.cm
   - DOMAIN-SUFFIX,google.cn
+  - DOMAIN-SUFFIX,google.co
   - DOMAIN-SUFFIX,google.co.ao
   - DOMAIN-SUFFIX,google.co.bw
   - DOMAIN-SUFFIX,google.co.ck
@@ -353,7 +352,6 @@ payload:
   - DOMAIN-SUFFIX,google.com.mx
   - DOMAIN-SUFFIX,google.com.my
   - DOMAIN-SUFFIX,google.com.na
-  - DOMAIN-SUFFIX,google.com.nf
   - DOMAIN-SUFFIX,google.com.ng
   - DOMAIN-SUFFIX,google.com.ni
   - DOMAIN-SUFFIX,google.com.np
@@ -388,7 +386,6 @@ payload:
   - DOMAIN-SUFFIX,google.dz
   - DOMAIN-SUFFIX,google.ee
   - DOMAIN-SUFFIX,google.es
-  - DOMAIN-SUFFIX,google.eu
   - DOMAIN-SUFFIX,google.fi
   - DOMAIN-SUFFIX,google.fm
   - DOMAIN-SUFFIX,google.fr
@@ -397,10 +394,8 @@ payload:
   - DOMAIN-SUFFIX,google.gg
   - DOMAIN-SUFFIX,google.gl
   - DOMAIN-SUFFIX,google.gm
-  - DOMAIN-SUFFIX,google.gp
   - DOMAIN-SUFFIX,google.gr
   - DOMAIN-SUFFIX,google.gy
-  - DOMAIN-SUFFIX,google.hk
   - DOMAIN-SUFFIX,google.hn
   - DOMAIN-SUFFIX,google.hr
   - DOMAIN-SUFFIX,google.ht
@@ -410,7 +405,6 @@ payload:
   - DOMAIN-SUFFIX,google.iq
   - DOMAIN-SUFFIX,google.is
   - DOMAIN-SUFFIX,google.it
-  - DOMAIN-SUFFIX,google.it.ao
   - DOMAIN-SUFFIX,google.je
   - DOMAIN-SUFFIX,google.jo
   - DOMAIN-SUFFIX,google.kg
@@ -432,7 +426,6 @@ payload:
   - DOMAIN-SUFFIX,google.mu
   - DOMAIN-SUFFIX,google.mv
   - DOMAIN-SUFFIX,google.mw
-  - DOMAIN-SUFFIX,google.mx
   - DOMAIN-SUFFIX,google.ne
   - DOMAIN-SUFFIX,google.net
   - DOMAIN-SUFFIX,google.nl
@@ -460,7 +453,6 @@ payload:
   - DOMAIN-SUFFIX,google.st
   - DOMAIN-SUFFIX,google.td
   - DOMAIN-SUFFIX,google.tg
-  - DOMAIN-SUFFIX,google.tk
   - DOMAIN-SUFFIX,google.tl
   - DOMAIN-SUFFIX,google.tm
   - DOMAIN-SUFFIX,google.tn
@@ -468,7 +460,6 @@ payload:
   - DOMAIN-SUFFIX,google.tt
   - DOMAIN-SUFFIX,google.ventures
   - DOMAIN-SUFFIX,google.vg
-  - DOMAIN-SUFFIX,google.vn
   - DOMAIN-SUFFIX,google.vu
   - DOMAIN-SUFFIX,google.ws
   - DOMAIN-SUFFIX,googleacquisitionmigration.com
@@ -482,12 +473,10 @@ payload:
   - DOMAIN-SUFFIX,googleapps-cn.com
   - DOMAIN-SUFFIX,googleapps.com
   - DOMAIN-SUFFIX,googlearth.com
-  - DOMAIN-SUFFIX,googleartproject.com
   - DOMAIN-SUFFIX,googleblog.com
   - DOMAIN-SUFFIX,googlebot.com
   - DOMAIN-SUFFIX,googlecapital.com
   - DOMAIN-SUFFIX,googlecert.net
-  - DOMAIN-SUFFIX,googlechinawebmaster.com
   - DOMAIN-SUFFIX,googlecnapps.cn
   - DOMAIN-SUFFIX,googlecode.com
   - DOMAIN-SUFFIX,googlecommerce.com
@@ -501,11 +490,6 @@ payload:
   - DOMAIN-SUFFIX,googlefiber.net
   - DOMAIN-SUFFIX,googlefinland.com
   - DOMAIN-SUFFIX,googleflights-cn.net
-  - DOMAIN-SUFFIX,googlegroups.com
-  - DOMAIN-SUFFIX,googlehosted.com
-  - DOMAIN-SUFFIX,googleideas.com
-  - DOMAIN-SUFFIX,googleinsidesearch.com
-  - DOMAIN-SUFFIX,googlelabs.com
   - DOMAIN-SUFFIX,googlemail.com
   - DOMAIN-SUFFIX,googlemaps.com
   - DOMAIN-SUFFIX,googlemashups.com
@@ -517,7 +501,6 @@ payload:
   - DOMAIN-SUFFIX,googleplex.com
   - DOMAIN-SUFFIX,googleplus.com
   - DOMAIN-SUFFIX,googlescholar.com
-  - DOMAIN-SUFFIX,googlesile.com
   - DOMAIN-SUFFIX,googlesource.com
   - DOMAIN-SUFFIX,googlestore.com
   - DOMAIN-SUFFIX,googlesverige.com
@@ -532,9 +515,6 @@ payload:
   - DOMAIN-SUFFIX,googleusercontent.com
   - DOMAIN-SUFFIX,googlevads-cn.com
   - DOMAIN-SUFFIX,googleventures.com
-  - DOMAIN-SUFFIX,googlevideo.com
-  - DOMAIN-SUFFIX,googleweblight.com
-  - DOMAIN-SUFFIX,googlezip.net
   - DOMAIN-SUFFIX,googlr.com
   - DOMAIN-SUFFIX,goolge.com
   - DOMAIN-SUFFIX,gooogle.com
@@ -546,7 +526,9 @@ payload:
   - DOMAIN-SUFFIX,gstaticcnapps.cn
   - DOMAIN-SUFFIX,gsuite.com
   - DOMAIN-SUFFIX,gwtproject.org
+  - DOMAIN-SUFFIX,haplorrhini.com
   - DOMAIN-SUFFIX,hdrplusdata.org
+  - DOMAIN-SUFFIX,hey.boo
   - DOMAIN-SUFFIX,hey.gle
   - DOMAIN-SUFFIX,hindiweb.com
   - DOMAIN-SUFFIX,howtogetmo.co.uk
@@ -561,23 +543,11 @@ payload:
   - DOMAIN-SUFFIX,jibemobile.com
   - DOMAIN-SUFFIX,kaggle.com
   - DOMAIN-SUFFIX,kaggle.io
+  - DOMAIN-SUFFIX,kaggleusercontent.com
   - DOMAIN-SUFFIX,keyhole.com
   - DOMAIN-SUFFIX,keytransparency.com
   - DOMAIN-SUFFIX,keytransparency.foo
   - DOMAIN-SUFFIX,keytransparency.org
-  - DOMAIN-SUFFIX,kh.google.com
-  - DOMAIN-SUFFIX,khm.google.com
-  - DOMAIN-SUFFIX,khm.googleapis.com
-  - DOMAIN-SUFFIX,khm0.google.com
-  - DOMAIN-SUFFIX,khm0.googleapis.com
-  - DOMAIN-SUFFIX,khm1.google.com
-  - DOMAIN-SUFFIX,khm1.googleapis.com
-  - DOMAIN-SUFFIX,khm2.google.com
-  - DOMAIN-SUFFIX,khm2.googleapis.com
-  - DOMAIN-SUFFIX,khm3.google.com
-  - DOMAIN-SUFFIX,khm3.googleapis.com
-  - DOMAIN-SUFFIX,khmdb.google.com
-  - DOMAIN-SUFFIX,khmdb.googleapis.com
   - DOMAIN-SUFFIX,lanternal.com
   - DOMAIN-SUFFIX,like.com
   - DOMAIN-SUFFIX,madewithcode.com
@@ -590,10 +560,10 @@ payload:
   - DOMAIN-SUFFIX,monitoring.qcpp1.net
   - DOMAIN-SUFFIX,monitoring.qpdp1.net
   - DOMAIN-SUFFIX,moodstocks.com
-  - DOMAIN-SUFFIX,mw1.google.com
   - DOMAIN-SUFFIX,near.by
   - DOMAIN-SUFFIX,nest.com
   - DOMAIN-SUFFIX,neverware.com
+  - DOMAIN-SUFFIX,new.day
   - DOMAIN-SUFFIX,nomulus.foo
   - DOMAIN-SUFFIX,oasisfeng.com
   - DOMAIN-SUFFIX,oauthz.com
@@ -745,45 +715,11 @@ payload:
   - DOMAIN-SUFFIX,xplr.co
   - DOMAIN-SUFFIX,zukunftswerkstatt.de
   - DOMAIN-SUFFIX,zynamics.com
-  - DOMAIN,alt1-mtalk.google.com
-  - DOMAIN,alt2-mtalk.google.com
-  - DOMAIN,alt3-mtalk.google.com
-  - DOMAIN,alt4-mtalk.google.com
-  - DOMAIN,alt5-mtalk.google.com
-  - DOMAIN,alt6-mtalk.google.com
-  - DOMAIN,alt7-mtalk.google.com
-  - DOMAIN,alt8-mtalk.google.com
-  - DOMAIN,lens.l.google.com
-  - DOMAIN,mtalk.google.com
-  - DOMAIN,www.googleapis.com
-  - IP-CIDR,108.177.125.188/32
-  - IP-CIDR,142.250.10.188/32
-  - IP-CIDR,142.250.31.188/32
-  - IP-CIDR,142.250.4.188/32
-  - IP-CIDR,142.250.96.188/32
-  - IP-CIDR,172.217.194.188/32
-  - IP-CIDR,172.217.218.188/32
-  - IP-CIDR,172.217.219.188/32
-  - IP-CIDR,172.253.122.188/32
-  - IP-CIDR,172.253.63.188/32
+  - IP-CIDR,172.110.32.0/21
   - IP-CIDR,173.194.0.0/16
-  - IP-CIDR,173.194.175.188/32
-  - IP-CIDR,173.194.218.188/32
-  - IP-CIDR,209.85.233.188/32
-  - IP-CIDR,64.233.177.188/32
-  - IP-CIDR,64.233.186.188/32
-  - IP-CIDR,64.233.187.188/32
-  - IP-CIDR,64.233.188.188/32
-  - IP-CIDR,64.233.189.188/32
+  - IP-CIDR,216.73.80.0/20
   - IP-CIDR,74.125.0.0/16
-  - IP-CIDR,74.125.127.188/32
-  - IP-CIDR,74.125.137.188/32
-  - IP-CIDR,74.125.203.188/32
-  - IP-CIDR,74.125.204.188/32
-  - IP-CIDR,74.125.206.188/32
-  - IP-CIDR,74.125.23.188/32
-  - IP-CIDR,74.125.24.188/32
-  - IP-CIDR,74.125.28.188/32
+  - IP-CIDR6,2620:120:e000::/40
   - PROCESS-NAME,backupandsync
   - PROCESS-NAME,com.android.vending
   - PROCESS-NAME,com.google.android.gms
